--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
         <!-- Google Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'> <!-- Open Sans for regular typefaces -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'> <!-- Open Sans Condensed for Headings -->
-        <!-- JavaScript Resources -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- Load jquery -->
-        <script src="bower_components/BigVideo.js/lib/bigvideo.js" type="text/javascript"></script> <!-- BigVideo.js for video playback -->
-        <script src="js/vales.js" type="text/javascript"></script> <!-- Vales-specific JavaScript -->
+        <link href='bower_components/jquery-ui/themes/base/theme.css' rel='stylesheet' type='text/css'> <!-- jquery-ui base stylesheet -->
+        <link href="bower_components/video.js/dist/video-js/video-js.min.css" rel='stylesheet' type='text/css'> <!-- video.js stylesheet -->
+        <link href="bower_components/BigVideo.js/css/bigvideo.css" rel='stylesheet' type='text/css'> <!-- BigVideo.js styles -->
 
     </head>
     <body>
-        <div class="modal" aria-hidden="true" id="modal-one">
+        <div class="modal" aria-hidden="true" id="modal-one"> <!-- Begin Modal -->
             <div class="modal-dialog">
                 <div class="modal-header">
                     <h2>Credits</h2>
@@ -61,8 +60,8 @@
                      <a href="#close" class="btn">Close</a>                    
                 </div>
             </div>
-        </div>
-        <div id="wrap">    
+        </div> <!-- End Modal -->
+        <div id="wrap"> <!-- Main content -->
             <div class="credits">
                 <a href="#modal-one">
                     <div class="spinner">
@@ -73,6 +72,16 @@
             </div>
             <div class="site-container">
             </div>
-        </div>
+        </div> <!-- End content -->
+        <!-- JavaScript Dependencies -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- Load jquery -->
+        <script src="bower_components/jquery-ui/jquery-ui.min.js"></script> <!-- jquery-ui -->
+        <script src="bower_components/eventEmitter/EventEmitter.min.js"></script> <!-- eventEmitter -->
+        <script src="bower_components/eventie/eventie.js"></script> <!-- eventie -->
+        <script src="bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script> <!-- imagesloaded -->
+        <script src="bower_components/video.js/dist/video-js/video-js"></script> <!-- video.js -->
+        <script src="bower_components/BigVideo.js/lib/bigvideo.js" type="text/javascript"></script> <!-- BigVideo.js -->
+        <!-- End JS Dependencies -->
+        <script src="js/vales.js" type="text/javascript"></script> <!-- Vales-specific JavaScript -->
     </body>
 </html>
