Fixed bad reference.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <script src="bower_components/eventEmitter/EventEmitter.min.js"></script> <!-- eventEmitter -->
         <script src="bower_components/eventie/eventie.js"></script> <!-- eventie -->
         <script src="bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script> <!-- imagesloaded -->
-        <script src="bower_components/video.js/dist/video-js/video-js"></script> <!-- video.js -->
+        <script src="bower_components/video.js/dist/video-js/video.js"></script> <!-- video.js -->
         <script src="bower_components/BigVideo.js/lib/bigvideo.js" type="text/javascript"></script> <!-- BigVideo.js -->
         <!-- End JS Dependencies -->
         <script src="js/vales.js" type="text/javascript"></script> <!-- Vales-specific JavaScript -->
