Updated styles, tweaked player, added additional controller functions.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <head>
-        <title>VALES</title>
+        <title>VALES</title>        
         <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" /> <!-- Load main stylesheet -->
         <!-- Google Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'> <!-- Open Sans for regular typefaces -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'> <!-- Open Sans Condensed for Headings -->
         <link href='bower_components/jquery-ui/themes/base/theme.css' rel='stylesheet' type='text/css'> <!-- jquery-ui base stylesheet -->
         <link href="bower_components/video.js/dist/video-js/video-js.min.css" rel='stylesheet' type='text/css'> <!-- video.js stylesheet -->
         <link href="bower_components/BigVideo.js/css/bigvideo.css" rel='stylesheet' type='text/css'> <!-- BigVideo.js styles -->
@@ -15,9 +13,6 @@
     <body>
         <div class="modal" aria-hidden="true" id="modal-one"> <!-- Begin Modal -->
             <div class="modal-dialog">
-                <div class="modal-header">
-                    <h2>Credits</h2>
-                </div>
                 <div class="modal-body">
                     <section>
                         <p>"Vale in the usual religious language of our culture is a depressed emotional place – the vale of tears... the valley of the shadow of death... a "long depression or hollow... the world regarded as a place of troubles, sorrow, and weeping, and the world regarded as the scene of the mortal, the earthly, the lowly... the way of dreams, reflections, fantasies, reveries... where events are deepened into experiences." – James Hillman</p>
@@ -25,7 +20,7 @@
                     <section>
                         <h5>VALES:</h5>
                         <p>Words and music by Asa Horvitz, except for "Spell" by Asa Horvitz and Bryan West</p>
-                        <p>Films by Jessica Sledge and Richard Hunter­Rivera</p>
+                        <p>Films by Jessica Sledge and Richard Hunter-Rivera</p>
                         <p>Recorded by JJ Beck at Akin Studios</p>
                         <p>Additional recording at Crazy Cat House by Stu Watson</p>
                         <p>Mixed by Asa Horvitz and Neil Strauch</p>
@@ -34,11 +29,12 @@
                         <p>Website design/developer: Lacey Coover</p>
                         <p>Produced by Asa Horvitz, JJ Beck, and Bryan West</p>
                         <p>Project direction by Asa Horvitz</p>
+                        <p>Additional salmon footage by Jon Warmerdam and Asa Horvitz</p>
                     </section>
                     <section>
-                        <p class="center">All songs &copy; 2013­2015 Songs About Buildings</p>
-                        <p class="center">VALES project &copy; 2015 Koans and Performance Project, 2015 – <a href="http://shatteryourleaves.com" target="_blank">Shatter Your Leaves Records</a></p>
-                    </section>
+                        <h5>Thank you:</h5>
+                        <p>Bill Horvitz, Robin Eschner, Mary Ann Ciavonne, Jack Ziegler, and Liz Peters for their love and grace in the face of loss. Bryan, Ben, Eliza, and Trevor for holding this music with me. JJ for January, driving, and everything else. John Tarrant and Susan Goyton for their insight and generosity. Roger for conversations and support. Patti Trimble and Douglas Kenning for their love and enthusiasm. Adam for reminding me to write. Stu at Shatter Your Leaves for April and years of Brooklyn music and for helping this project get out in the world. Matt at Hope for the Tape Deck for always listening and for the cassette. Nat for Maine and for getting it. Neil for ears and endless patience. Jes and Richard for their beautiful films. Lacey for putting in endless hours and making it all come together. Lukasz, Gedney, Trevor, Nini, Kyle, Bob, and everyone else in the Koans and Performance Project for their initial work on these songs. John Warmerdam for the lead on the salmon trapped in the Navarro. The salmon in Austin Creek.</p>                     
+                    </section>                    
                     <section>
                         <p>Asa Horvitz – singing, guitars, keyboards, electronics</p>
                         <p>Eliza McKelway – singing, electronics</p>
@@ -48,16 +44,18 @@
                         <p>WITH:</p>
                         <p>JJ Beck – drums, piano</p>
                         <p>Sam Clement – bass</p>
-                    </section>
+                    </section>      
                     <section>
-                        <h5>Thank you:</h5>
-                        <p>Bill Horvitz, Robin Eschner, Mary Ann Ciavonne, Jack Ziegler, and Liz Peters for their love and grace in the face of loss. Bryan, Ben, Eliza, and Trevor for holding this music with me. JJ for January, driving, and everything else. John Tarrant and Susan Goyton for their insight and generosity. Roger for conversations and support. Patti Trimble and Douglas Kenning for their love and enthusiasm. Adam for reminding me to write. Stu at Shatter Your Leaves for April and years of Brooklyn music and for helping this project get out in the world. Matt at Hope for the Tape Deck for always listening and for the cassette. Nat for Maine and for getting it. Neil for ears and endless patience. Jes and Richard for their beautiful films. Lacey for putting in endless hours and making it all come together. Lukasz, Gedney, Trevor, Nini, Kyle, Bob, and everyone else in the Koans and Performance Project for their initial work on these songs. John Warmerdam for the lead on the salmon trapped in the Navarro. The salmon in Austin Creek.</p>
-                        <p>For Dominic.</p>
-                        <p>This project was funded in part by a grant from the Rudolf Steiner Foundation.</p>
-                    </section>                
+                        <p class="center">All songs &copy; 2013&ndash;2015 Songs About Buildings</p>
+                        <p class="center">VALES project &copy; 2015 Koans and Performance Project, 2015 – <a href="http://shatteryourleaves.com" target="_blank">Shatter Your Leaves Records</a></p>
+                        <p class="center">This project was funded in part by a grant from the Rudolf Steiner Foundation.</p>
+                    </section>                    
+                    <section>
+                        <p class="center">For Dominic.</p>   
+                    </section>
                 </div>            
                 <div class="modal-footer">
-                     <a href="#close" class="btn">Close</a>                    
+                     <a href="#close" class="btn">X</a>                    
                 </div>
             </div>
         </div> <!-- End Modal -->
