Lots of small tweaks.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <p>Mixed by Asa Horvitz and Neil Strauch</p>
                         <p>Mastered by Roger Seibel at SAE, Phoenix, AZ</p>
                         <p>Cassette design by Alex Tatusian</p>
-                        <p>Website design/developer: Lacey Coover</p>
+                        <p>Website design/developer: Joey Lappin</p>
                         <p>Produced by Asa Horvitz, JJ Beck, and Bryan West</p>
                         <p>Project direction by Asa Horvitz</p>
                         <p>Additional salmon footage by Jon Warmerdam and Asa Horvitz</p>
@@ -34,7 +34,8 @@
                     <section>
                         <h5>Thank you:</h5>
                         <p>Bill Horvitz, Robin Eschner, Mary Ann Ciavonne, Jack Ziegler, and Liz Peters for their love and grace in the face of loss. Bryan, Ben, Eliza, and Trevor for holding this music with me. JJ for January, driving, and everything else. John Tarrant and Susan Goyton for their insight and generosity. Roger for conversations and support. Patti Trimble and Douglas Kenning for their love and enthusiasm. Adam for reminding me to write. Stu at Shatter Your Leaves for April and years of Brooklyn music and for helping this project get out in the world. Matt at Hope for the Tape Deck for always listening and for the cassette. Nat for Maine and for getting it. Neil for ears and endless patience. Jes and Richard for their beautiful films. Lacey for putting in endless hours and making it all come together. Lukasz, Gedney, Trevor, Nini, Kyle, Bob, and everyone else in the Koans and Performance Project for their initial work on these songs. John Warmerdam for the lead on the salmon trapped in the Navarro. The salmon in Austin Creek.</p>                     
-                    </section>                    
+                        <p class="margin">For Dominic.</p>   
+                    </section>                                        
                     <section>
                         <p>Asa Horvitz – singing, guitars, keyboards, electronics</p>
                         <p>Eliza McKelway – singing, electronics</p>
@@ -46,12 +47,12 @@
                         <p>Sam Clement – bass</p>
                     </section>      
                     <section>
-                        <p class="center">All songs &copy; 2013&ndash;2015 Songs About Buildings</p>
+                        <p class="center">ALL &copy; 2013&ndash;2015 Songs About Buildings</p>
                         <p class="center">VALES project &copy; 2015 Koans and Performance Project, 2015 – <a href="http://shatteryourleaves.com" target="_blank">Shatter Your Leaves Records</a></p>
                         <p class="center">This project was funded in part by a grant from the Rudolf Steiner Foundation.</p>
-                    </section>                    
+                    </section>   
                     <section>
-                        <p class="center">For Dominic.</p>   
+                        <a href="http://www.shatteryourleaves.com" target="_blank"><img src="images/shatter-tall-email.png" class="shatter-logo"></a>
                     </section>
                 </div>            
                 <div class="modal-footer">
