--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </div> <!-- End content -->
         <!-- JavaScript Dependencies -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- Load jquery -->
+        <script src="bower_components/jquery/dist/jquery.min.js"></script> <!-- Load jquery -->
         <script src="bower_components/jquery-ui/jquery-ui.min.js"></script> <!-- jquery-ui -->
         <script src="bower_components/eventEmitter/EventEmitter.min.js"></script> <!-- eventEmitter -->
         <script src="bower_components/eventie/eventie.js"></script> <!-- eventie -->
