Took out dash in credits

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </section>      
                     <section>
                         <p class="center">ALL &copy; 2013&ndash;2015 Songs About Buildings</p>
-                        <p class="center">VALES project &copy; 2015 Koans and Performance Project, 2015 – <a href="http://shatteryourleaves.com" target="_blank">Shatter Your Leaves Records</a></p>
+                        <p class="center">VALES project &copy; 2015 Koans and Performance Project, 2015 <a href="http://shatteryourleaves.com" target="_blank">Shatter Your Leaves Records</a></p>
                         <p class="center">This project was funded in part by a grant from the Rudolf Steiner Foundation.</p>
                     </section>   
                     <section>
