Synced index.html with live site. Added Facebook preview.

--- a/index.html
+++ b/index.html
@@ -1,84 +1,118 @@
 <!DOCTYPE html>
 <html>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <head>
-        <title>VALES</title>        
-        <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" /> <!-- Load main stylesheet -->
-        <!-- Google Fonts -->
-        <link href='bower_components/jquery-ui/themes/base/theme.css' rel='stylesheet' type='text/css'> <!-- jquery-ui base stylesheet -->
-        <link href="bower_components/video.js/dist/video-js/video-js.min.css" rel='stylesheet' type='text/css'> <!-- video.js stylesheet -->
-        <link href="bower_components/BigVideo.js/css/bigvideo.css" rel='stylesheet' type='text/css'> <!-- BigVideo.js styles -->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    </head>
-    <body>
-        <div class="modal" aria-hidden="true" id="modal-one"> <!-- Begin Modal -->
-            <div class="modal-dialog">
-                <div class="modal-body">
-                    <section>
-                        <p>"Vale in the usual religious language of our culture is a depressed emotional place – the vale of tears... the valley of the shadow of death... a "long depression or hollow... the world regarded as a place of troubles, sorrow, and weeping, and the world regarded as the scene of the mortal, the earthly, the lowly... the way of dreams, reflections, fantasies, reveries... where events are deepened into experiences." – James Hillman</p>
-                    </section>
-                    <section>
-                        <h5>VALES:</h5>
-                        <p>Words and music by Asa Horvitz, except for "Spell" by Asa Horvitz and Bryan West</p>
-                        <p>Films by Jessica Sledge and Richard Hunter-Rivera</p>
-                        <p>Recorded by JJ Beck at Akin Studios</p>
-                        <p>Additional recording at Crazy Cat House by Stu Watson</p>
-                        <p>Mixed by Asa Horvitz and Neil Strauch</p>
-                        <p>Mastered by Roger Seibel at SAE, Phoenix, AZ</p>
-                        <p>Cassette design by Alex Tatusian</p>
-                        <p>Website design/developer: Joey Lappin</p>
-                        <p>Produced by Asa Horvitz, JJ Beck, and Bryan West</p>
-                        <p>Project direction by Asa Horvitz</p>
-                        <p>Additional salmon footage by Jon Warmerdam and Asa Horvitz</p>
-                    </section>
-                    <section>
-                        <h5>Thank you:</h5>
-                        <p>Bill Horvitz, Robin Eschner, Mary Ann Ciavonne, Jack Ziegler, and Liz Peters for their love and grace in the face of loss. Bryan, Ben, Eliza, and Trevor for holding this music with me. JJ for January, driving, and everything else. John Tarrant and Susan Goyton for their insight and generosity. Roger for conversations and support. Patti Trimble and Douglas Kenning for their love and enthusiasm. Adam for reminding me to write. Stu at Shatter Your Leaves for April and years of Brooklyn music and for helping this project get out in the world. Matt at Hope for the Tape Deck for always listening and for the cassette. Nat for Maine and for getting it. Neil for ears and endless patience. Jes and Richard for their beautiful films. Lukasz, Gedney, Trevor, Nini, Kyle, Bob, and everyone else in the Koans and Performance Project for their initial work on these songs. John Warmerdam for the lead on the salmon trapped in the Navarro. The salmon in Austin Creek.</p>                     
-                        <p class="margin">For Dominic.</p>   
-                    </section>                                        
-                    <section>
-                        <p>Asa Horvitz – singing, guitars, keyboards, electronics</p>
-                        <p>Eliza McKelway – singing, electronics</p>
-                        <p>Ben Seretan – guitars, electronics, singing, keyboards</p>
-                        <p>Bryan West – cello, singing, keyboards</p>
-                        <p>Trevor Wilson – singing, keyboards</p>
-                        <p>WITH:</p>
-                        <p>JJ Beck – drums, piano</p>
-                        <p>Sam Clement – bass</p>
-                    </section>      
-                    <section>
-                        <p class="center">ALL &copy; 2013&ndash;2015 Songs About Buildings</p>
-                        <p class="center">VALES project &copy; 2015 Koans and Performance Project, 2015 <a href="http://shatteryourleaves.com" target="_blank">Shatter Your Leaves Records</a></p>
-                        <p class="center">This project was funded in part by a grant from the Rudolf Steiner Foundation.</p>
-                    </section>   
-                    <section>
-                        <a href="http://www.shatteryourleaves.com" target="_blank"><img src="images/shatter-tall-email.png" class="shatter-logo"></a>
-                    </section>
-                </div>            
-                <div class="modal-footer">
-                     <a href="#close" class="btn">X</a>                    
+<head>
+    <title>VALES</title>
+    <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" />
+    <!-- Load main stylesheet -->
+    <!-- Google Fonts -->
+    <link href='bower_components/jquery-ui/themes/base/theme.css' rel='stylesheet' type='text/css'>
+    <!-- jquery-ui base stylesheet -->
+    <link href="bower_components/video.js/dist/video-js/video-js.min.css" rel='stylesheet' type='text/css'>
+    <!-- video.js stylesheet -->
+    <link href="bower_components/BigVideo.js/css/bigvideo.css" rel='stylesheet' type='text/css'>
+    <!-- BigVideo.js styles -->
+    <meta property="og:image" content="http://valesvalesvales.com/images/SALMON_LOOPS.jpg" />    
+</head>
+
+<body>
+    <div class="modal" aria-hidden="true" id="modal-one">
+        <!-- Begin Modal -->
+        <div class="modal-dialog">
+            <div class="modal-body">
+                <section>
+                    <p>"Vale in the usual religious language of our culture is a depressed emotional place – the vale of tears... the valley of the shadow of death... a "long depression or hollow... the world regarded as a place of troubles, sorrow, and weeping, and the world regarded as the scene of the mortal, the earthly, the lowly... the way of dreams, reflections, fantasies, reveries... where events are deepened into experiences." – James Hillman</p>
+                    <p class="margin">In 2012 my best friend and longtime musical partner Dominic Ziegler died of an unexpected series of strokes at the age of 23. In early 2013 I returned home to the rural area of Northern California where we grew up, to grieve and recover from this almost inconceivable loss. Over the course of a few months, I wrote a series of songs filled with memories, sorrow, hope, and fear, streaked through with love for Dominic and with the pain of his passing, with light and dark, and rich with images of our home landscape – the hills and redwood forests, wild rivers filled with salmon, deer, hawks, and the torn up earth left by wild boars…</p>
+                    <p class="margin">In the fall of 2013 I returned to Brooklyn and asked my friends Ben, Eliza, Bryan, and Trevor to start a new band to perform and record this material. In the depths of the coldest winter in memory, in temperatures reaching 30 below zero, we recorded the material in a 19th century Armory in Hoosick Falls, NY with the wonderful JJ Beck.</p>
+                    <p class="margin">During my time in California, as part of our work on the Koans and Performance Project, my friends Jessica Sledge and Richard Hunter-Rivera made a series of films of Northern California, turning their unflinching eyes on the wild coast and mountains and industrial agriculture and suburbia. They’ve edited these films to fit the songs, though it’s more that the two arose together, from the same source.</p>
+                    <p class="margin">VALES is a place where we can pause, stop, reflect, look and listen. I think it’s hard for us in our culture to accept anything that slows us down, stops us cold, makes us sad and humble and lowly and reminds us that we are creatures. But we all know that many, many things do this to us, over the course of a life. And maybe this isn’t so bad, because these things – although they’re often tragic – force us to forget our schemes and plans and really show up for life, they call us to the things of the world.</p>
+                    <p class="margin">VALES, then, is an invitation to pause, and listen, and reflect, to feel our bodies and look around and remember that we are creatures with sorrows and pains and joys and this is in fact a wonderful thing… a world of images, pools of water, sheltered valleys on the internet…</p>
+                    <p class="margin">If left alone, VALES will autoplay in the order of the album. Or you can find your own way, and you might even discover some surprises… I hope that you enjoy. Thank you for visiting.</p>
+                    <p class="margin">Yours,</p>
+                    <p class="margin">Asa</p>
+                </section>
+                <section>
+                    <h5>VALES:</h5>
+                    <p>Words and music by Asa Horvitz, except for "Spell" by Asa Horvitz and Bryan West</p>
+                    <p>Films by Jessica Sledge and Richard Hunter-Rivera</p>
+                    <p>Additional salmon footage by Jon Warmerdam and Asa Horvitz</p>
+                    <p>Recorded by JJ Beck at Akin Studios, Hoosick Falls, NY</p>
+                    <p>Additional recording at Crazy Cat House in Bedstuy by Stu Watson</p>
+                    <p>Mixed by Asa Horvitz and Neil Strauch</p>
+                    <p>Mastered by Roger Seibel at SAE, Phoenix, AZ</p>
+                    <p>Cassette design by Alex Tatusian</p>
+                    <p>Website design/developer: Joey Lappin</p>
+                    <p>Produced by Asa Horvitz, JJ Beck, and Bryan West</p>
+                    <p>Project direction by Asa Horvitz</p>
+                </section>
+                <section>
+                    <p>Asa Horvitz – singing, guitars, keyboards, electronics</p>
+                    <p>Eliza McKelway – singing, electronics</p>
+                    <p>Ben Seretan – guitars, electronics, singing, keyboards</p>
+                    <p>Bryan West – cello, singing, keyboards</p>
+                    <p>Trevor Wilson – singing, keyboards</p>
+                    <p>WITH:</p>
+                    <p>JJ Beck – drums, piano</p>
+                    <p>Sam Clement – bass</p>
+                </section>
+
+                <section>
+                    <h5>THANK YOU:</h5>
+                    <p>Bill Horvitz, Robin Eschner, Mary Ann Ciavonne, Jack Ziegler, and Liz Peters for their love and grace in the face of loss. Bryan, Ben, Eliza, and Trevor for holding this music with me. JJ for January, driving, and everything else. John Tarrant and Susan Goyton for their insight and generosity. Roger for conversations and support. Patti Trimble and Douglas Kenning for their love and enthusiasm. Adam for reminding me to write in Descanso. Stu at Shatter Your Leaves for April and years of Brooklyn music and for helping this project get out in the world. Matt at Hope for the Tape Deck for always listening and for the cassette. Nat for Maine and for getting it. Michael and Curt at NewAm for hosting our shows. Joey for dedicating himself and making the site happen. Neil for ears and endless patience. Jes and Richard for their beautiful films. Lukasz, Gedney, Trevor, Nini, Kyle, Bob, and everyone else in the Koans and Performance Project for their initial work on these songs. John Warmerdam for the lead on the salmon trapped in the Navarro. The salmon in Austin Creek.</p>
+                    <p class="margin">For Dominic.</p>
+                </section>
+                <section>
+                    <p>Tracklist – (autoplay) – 01 Salmon Loops 02 Spell 03 Fisher King 04 Loop Loop 05 Salmon Song 06 Youthful Folly 07 Whalewatch</p>
+                </section>
+                <section>
+                    <p class="center">ALL &copy; 2013&ndash;2015 Songs About Buildings</p>
+                    <p class="center">VALES project &copy; 2015 Koans and Performance Project, 2015 <a href="http://shatteryourleaves.com" target="_blank">Shatter Your Leaves Records</a>
+                    </p>
+                    <p class="center">This project was funded in part by a grant from the Rudolf Steiner Foundation.</p>
+                </section>
+                <section>
+                    <a href="http://www.shatteryourleaves.com" target="_blank">
+                        <img src="images/shatter-tall-email.png" class="shatter-logo">
+                    </a>
+                </section>
+            </div>
+            <div class="modal-footer">
+                <a href="#close" class="btn">X</a> 
+            </div>
+        </div>
+    </div>
+    <!-- End Modal -->
+    <div id="wrap">
+        <!-- Main content -->
+        <div class="credits">
+            <a href="#modal-one">
+                <div class="spinner">
                 </div>
-            </div>
-        </div> <!-- End Modal -->
-        <div id="wrap"> <!-- Main content -->
-            <div class="credits">
-                <a href="#modal-one">
-                    <div class="spinner">
-                    </div>
-                </a>
-            </div>
-            <div class="site-container">
-            </div>
-        </div> <!-- End content -->
-        <!-- JavaScript Dependencies -->
-        <script src="bower_components/jquery/dist/jquery.min.js"></script> <!-- Load jquery -->
-        <script src="bower_components/jquery-ui/jquery-ui.min.js"></script> <!-- jquery-ui -->
-        <script src="bower_components/eventEmitter/EventEmitter.min.js"></script> <!-- eventEmitter -->
-        <script src="bower_components/eventie/eventie.js"></script> <!-- eventie -->
-        <script src="bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script> <!-- imagesloaded -->
-        <script src="bower_components/video.js/dist/video-js/video.js"></script> <!-- video.js -->
-        <script src="bower_components/BigVideo.js/lib/bigvideo.js" type="text/javascript"></script> <!-- BigVideo.js -->
-        <!-- End JS Dependencies -->
-        <script src="js/vales.js" type="text/javascript"></script> <!-- Vales-specific JavaScript -->
-    </body>
+            </a>
+        </div>
+        <div class="site-container">
+        </div>
+    </div>
+    <!-- End content -->
+    <!-- JavaScript Dependencies -->
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <!-- Load jquery -->
+    <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <!-- jquery-ui -->
+    <script src="bower_components/eventEmitter/EventEmitter.min.js"></script>
+    <!-- eventEmitter -->
+    <script src="bower_components/eventie/eventie.js"></script>
+    <!-- eventie -->
+    <script src="bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <!-- imagesloaded -->
+    <script src="bower_components/video.js/dist/video-js/video.js"></script>
+    <!-- video.js -->
+    <script src="bower_components/BigVideo.js/lib/bigvideo.js" type="text/javascript"></script>
+    <!-- BigVideo.js -->
+    <!-- End JS Dependencies -->
+    <script src="js/vales.js" type="text/javascript"></script>
+    <!-- Vales-specific JavaScript -->
+</body>
+
 </html>
